# echo

./: BUILD-WITHOUT-TERMINAL.md  CMakeLists.txt  HANDOFF.md  LICENSE.md  README.md  THIRD-PARTY-LICENSES.md  V3-NOTES.md  build-macos.yml  make_icon.py
Source/: Afc.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SystemCpu.h
